# pythguard

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  REDDIT_POST.md  SUBMISSION.md  docker-compose.yml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: schemas.py
backend/app/api/routes/: demo.py  feeds.py  risk.py
backend/app/core/: demo_data.py  risk_engine.py  telegram_alerts.py
backend/app/protocols/: kamino_public_api.py  marginfi_adapter.py  marginfi_public_api.py
backend/app/pyth/: mcp_client.py
backend/tests/: test_demo_data.py  test_risk_engine.py  test_telegram_alerts.py
docs/: API.md  ARCHITECTURE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  main.jsx
frontend/src/components/Dashboard/: ConfidenceChart.jsx  FeedStatusBar.jsx  PositionCard.jsx  RiskMeter.jsx
frontend/src/components/Wallet/: ConnectWallet.jsx  WatchWallet.jsx
frontend/src/hooks/: useFeeds.js  useRiskScore.js
frontend/src/pages/: index.jsx
marginfi_reader/: Dockerfile  marginfi_reader.js  package.json
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
rust/src/feeds/: mod.rs  price_feed.rs
rust/src/protocols/: marginfi.rs  mod.rs
rust/src/types/: mod.rs  position.rs
scripts/: 1_rodar_backend.bat  2_rodar_frontend.bat  3_rodar_testes.bat  4_alertas_telegram.bat
